--- a/vignettes/creating-AHBioImageDbs.Rmd
+++ b/vignettes/creating-AHBioImageDbs.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Provide Bio- and Biomedical Image Data-set for AnnotationHub"
+title: "Provide Bio- and Biomedical Image Dataset for AnnotationHub"
 author: "Satoshi Kume, Kozo Nishida"
 graphics: no
 package: AHBioImageDbs
@@ -7,7 +7,7 @@ output:
     BiocStyle::html_document:
         toc_float: true
 vignette: >
-    %\VignetteIndexEntry{Provide BioImage database for AnnotationHub}
+    %\VignetteIndexEntry{Provide Bio- and Biomedical Image Dataset for AnnotationHub}
     %\VignetteEngine{knitr::rmarkdown}
     %\VignetteEncoding{UTF-8}
     %\VignetteDepends{AnnotationHub}
@@ -17,15 +17,19 @@ vignette: >
 BiocStyle::markdown()
 ```
 
-# Fetch XXXX databases from `AnnotationHub`
+# Fetch Bioimage databases from `AnnotationHub`
 
 The `AHBioImageDbs` package provides the metadata for all PathBank tibble
-databases in `r Biocpkg("AnnotationHub")`. First we load/update the
-`AnnotationHub` resource.
+databases in `r Biocpkg("AnnotationHub")`. 
+
+First we load/update the `AnnotationHub` resource.
 
 ```{r load-lib, message = FALSE}
 library(AnnotationHub)
 ah <- AnnotationHub()
 ```
+
+
+
 
 
