--- a/vignettes/creating-AHBioImageDbs.Rmd
+++ b/vignettes/creating-AHBioImageDbs.Rmd
@@ -18,12 +18,16 @@ vignette: >
 BiocStyle::markdown()
 ```
 
-# Fetch Bioimage databases from `AnnotationHub`
+# Introduction
 
 The `AHBioImageDbs` package provides the metadata for all PathBank tibble
 databases in `r Biocpkg("AnnotationHub")`. 
 
 First we load/update the `AnnotationHub` resource.
+
+#画像解析の標準化は進んでいない
+#
+
 
 ```{r load-lib, message = FALSE}
 library(AnnotationHub)
