--- a/vignettes/creating-AHBioImageDbs.Rmd
+++ b/vignettes/creating-AHBioImageDbs.Rmd
@@ -125,13 +125,15 @@ For this dataset in AHBioImageDbs , the published open data on each web-sites
 was used as following; 
 1) For the cellular microstructures, the cell tracking, electron microscopy-
 based imaging data of mouse brain 
-(EM_id0001_Brain_CA1_hippocampus_region_5dTensor.Rda) [5-6], Drosophila brain (EM_id0002_Drosophila_brain_region_5dTensor.Rda) [7-8], mouse B myeloma cell 
+(EM_id0001_Brain_CA1_hippocampus_region_5dTensor.Rda) [5-6], Drosophila brain 
+(EM_id0002_Drosophila_brain_region_5dTensor.Rda) [7-8], mouse B myeloma cell 
 line J558L (EM_id0003_J558L_4dTensor.Rda) [9], and The primary human T cell 
 isolated from peripheral blood mononuclear cells 
 (EM_id0004_PrHudata_4dTensor.Rda) [9].
 2) For the cell tracking, light microscopy-based imaging data of human HeLa 
 cells on a flat glass (ex. LM_id0001_DIC_C2DH_HeLa_4dTensor.Rda) [10], human 
-glioblastoma-astrocytoma U373 cells on a polyacrylamide substrate (ex. LM_id0002_PhC_C2DH_U373_4dTensor.Rda) [10], and GFP-GOWT1 mouse stem cells 
+glioblastoma-astrocytoma U373 cells on a polyacrylamide substrate (ex. 
+LM_id0002_PhC_C2DH_U373_4dTensor.Rda) [10], and GFP-GOWT1 mouse stem cells 
 (ex. LM_id0003_Fluo_N2DH_GOWT1_4dTensor.Rda) [11]
 
 The detailed information was described in the metadata file of AHBioImageDbs.
